--- a/HelPFactory_WEB/Areas/Security/Views/Shared/_Layout.cshtml
+++ b/HelPFactory_WEB/Areas/Security/Views/Shared/_Layout.cshtml
@@ -99,7 +99,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <div id="kt_header_mobile" class="kt-header-mobile  kt-header-mobile--fixed ">
         <div class="kt-header-mobile__logo">
             <a href="demo6/index.html">
-                <img alt="Logo" src="./assets/media/logos/logo-6-sm.png" />
+                <img alt="Logo" src="/assets/media/logos/logo-6-sm.png" />
             </a>
         </div>
         <div class="kt-header-mobile__toolbar">
@@ -180,7 +180,7 @@ License: You must have a valid license purchased only from themeforest(the above
                     <div class="kt-header__brand kt-grid__item  " id="kt_header_brand">
                         <div class="kt-header__brand-logo">
                             <a href="demo6/index.html">
-                                <img alt="Logo" src="./assets/media/logos/logo-6.png" />
+                                <img alt="Logo" src="/assets/media/logos/logo-6.png" />
                             </a>
                         </div>
                     </div>
@@ -862,7 +862,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         </div>
                                                     </div>
                                                     <a href="#" class="kt-mycart__pic">
-                                                        <img src="./assets/media/products/product9.jpg" title="">
+                                                        <img src="/assets/media/products/product9.jpg" title="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -884,7 +884,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         </div>
                                                     </div>
                                                     <a href="#" class="kt-mycart__pic">
-                                                        <img src="./assets/media/products/product13.jpg" title="">
+                                                        <img src="/assets/media/products/product13.jpg" title="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -906,7 +906,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         </div>
                                                     </div>
                                                     <a href="#" class="kt-mycart__pic">
-                                                        <img src="./assets/media/products/product16.jpg" title="">
+                                                        <img src="/assets/media/products/product16.jpg" title="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -928,7 +928,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                         </div>
                                                     </div>
                                                     <a href="#" class="kt-mycart__pic">
-                                                        <img src="./assets/media/products/product15.jpg" title="" alt="">
+                                                        <img src="/assets/media/products/product15.jpg" title="" alt="">
                                                     </a>
                                                 </div>
                                             </div>
@@ -962,26 +962,26 @@ License: You must have a valid license purchased only from themeforest(the above
                         <div class="kt-header__topbar-item kt-header__topbar-item--langs">
                             <div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="10px,0px">
                                 <span class="kt-header__topbar-icon kt-header__topbar-icon--brand">
-                                    <img class="" src="./assets/media/flags/012-uk.svg" alt="" />
+                                    <img class="" src="/assets/media/flags/012-uk.svg" alt="" />
                                 </span>
                             </div>
                             <div class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim">
                                 <ul class="kt-nav kt-margin-t-10 kt-margin-b-10">
                                     <li class="kt-nav__item kt-nav__item--active">
                                         <a href="#" class="kt-nav__link">
-                                            <span class="kt-nav__link-icon"><img src="./assets/media/flags/020-flag.svg" alt="" /></span>
+                                            <span class="kt-nav__link-icon"><img src="/assets/media/flags/020-flag.svg" alt="" /></span>
                                             <span class="kt-nav__link-text">English</span>
                                         </a>
                                     </li>
                                     <li class="kt-nav__item">
                                         <a href="#" class="kt-nav__link">
-                                            <span class="kt-nav__link-icon"><img src="./assets/media/flags/016-spain.svg" alt="" /></span>
+                                            <span class="kt-nav__link-icon"><img src="/assets/media/flags/016-spain.svg" alt="" /></span>
                                             <span class="kt-nav__link-text">Spanish</span>
                                         </a>
                                     </li>
                                     <li class="kt-nav__item">
                                         <a href="#" class="kt-nav__link">
-                                            <span class="kt-nav__link-icon"><img src="./assets/media/flags/017-germany.svg" alt="" /></span>
+                                            <span class="kt-nav__link-icon"><img src="/assets/media/flags/017-germany.svg" alt="" /></span>
                                             <span class="kt-nav__link-text">German</span>
                                         </a>
                                     </li>
@@ -995,7 +995,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             <div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="10px,0px">
                                 <span class="kt-hidden kt-header__topbar-welcome">Hi,</span>
                                 <span class="kt-hidden kt-header__topbar-username">Nick</span>
-                                <img class="kt-hidden" alt="Pic" src="./assets/media/users/300_21.jpg" />
+                                <img class="kt-hidden" alt="Pic" src="/assets/media/users/300_21.jpg" />
                                 <span class="kt-header__topbar-icon kt-hidden-"><i class="flaticon2-user-outline-symbol"></i></span>
                             </div>
                             <div class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim dropdown-menu-xl">
@@ -1003,7 +1003,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                 <!--begin: Head -->
                                 <div class="kt-user-card kt-user-card--skin-dark kt-notification-item-padding-x" style="background-image: url(./assets/media/misc/bg-1.jpg)">
                                     <div class="kt-user-card__avatar">
-                                        <img class="kt-hidden" alt="Pic" src="./assets/media/users/300_25.jpg" />
+                                        <img class="kt-hidden" alt="Pic" src="/assets/media/users/300_25.jpg" />
 
                                         <!--use below badge element instead the user avatar to display username's first letter(remove kt-hidden class to display it) -->
                                         <span class="kt-badge kt-badge--lg kt-badge--rounded kt-badge--bold kt-font-success">S</span>
@@ -1160,9 +1160,13 @@ License: You must have a valid license purchased only from themeforest(the above
                                 2020&nbsp;&copy;&nbsp;<a href="http://keenthemes.com/metronic" target="_blank" class="kt-link">HelpFactory</a>
                             </div>
                             <div class="kt-footer__menu">
-                                <a href="javascript;;" target="_blank" class="kt-footer__menu-link kt-link">@Html.ActionLink("Contact Us", "ContactUs")</a>
+                                <a href="javascript;;" target="_blank" class="kt-footer__menu-link kt-link">@Html.ActionLink("About Us", "About")</a>
+                                <a href="javascript;;" target="_blank" class="kt-footer__menu-link kt-link">@Html.ActionLink("FAQ", "FAQ")</a>
+                                <a href="javascript;;" target="_blank" class="kt-footer__menu-link kt-link">@Html.ActionLink("Team", "Team")</a>
+                                <a href="javascript;;" target="_blank" class="kt-footer__menu-link kt-link">@Html.ActionLink("Contact Us", "Contact")</a>
                                 <a href="javascript;;" target="_blank" class="kt-footer__menu-link kt-link">@Html.ActionLink("Privacy Policy", "PrivacyPolicy")</a>
                                 <a href="javascript;;" target="_blank" class="kt-footer__menu-link kt-link">@Html.ActionLink("Terms & Conditions", "TermsAndConditions") </a>
+
                             </div>
                         </div>
                     </div>
