--- a/HelPFactory_WEB/Areas/Security/Views/Shared/_Layout.cshtml
+++ b/HelPFactory_WEB/Areas/Security/Views/Shared/_Layout.cshtml
@@ -961,37 +961,16 @@ License: You must have a valid license purchased only from themeforest(the above
                         <!--begin: Language bar -->
                         <div class="kt-header__topbar-item kt-header__topbar-item--langs">
                             <div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="10px,0px">
-                                <span class="kt-header__topbar-icon kt-header__topbar-icon--brand">
-                                    <img class="" src="/assets/media/flags/012-uk.svg" alt="" />
+                                <span class="kt-header__topbar-icon kt-header__topbar-icon--brand" >
+                                    <img class="" src="/assets/media/icons/svg/General/User.svg" alt="">
                                 </span>
                             </div>
-                            <div class="dropdown-menu dropdown-menu-fit dropdown-menu-right dropdown-menu-anim">
-                                <ul class="kt-nav kt-margin-t-10 kt-margin-b-10">
-                                    <li class="kt-nav__item kt-nav__item--active">
-                                        <a href="#" class="kt-nav__link">
-                                            <span class="kt-nav__link-icon"><img src="/assets/media/flags/020-flag.svg" alt="" /></span>
-                                            <span class="kt-nav__link-text">English</span>
-                                        </a>
-                                    </li>
-                                    <li class="kt-nav__item">
-                                        <a href="#" class="kt-nav__link">
-                                            <span class="kt-nav__link-icon"><img src="/assets/media/flags/016-spain.svg" alt="" /></span>
-                                            <span class="kt-nav__link-text">Spanish</span>
-                                        </a>
-                                    </li>
-                                    <li class="kt-nav__item">
-                                        <a href="#" class="kt-nav__link">
-                                            <span class="kt-nav__link-icon"><img src="/assets/media/flags/017-germany.svg" alt="" /></span>
-                                            <span class="kt-nav__link-text">German</span>
-                                        </a>
-                                    </li>
-                                </ul>
-                            </div>
+                          
                         </div>
 
                         <!--end: Language bar -->
                         <!--begin: User bar -->
-                        <div class="kt-header__topbar-item kt-header__topbar-item--user">
+                        <div class="kt-header__topbar-item kt-header__topbar-item--user" data-toggle="kt-tooltip" title="User" data-placement="top">
                             <div class="kt-header__topbar-wrapper" data-toggle="dropdown" data-offset="10px,0px">
                                 <span class="kt-hidden kt-header__topbar-welcome">Hi,</span>
                                 <span class="kt-hidden kt-header__topbar-username">Nick</span>
@@ -1018,7 +997,7 @@ License: You must have a valid license purchased only from themeforest(the above
 
                                 <!--end: Head -->
                                 <!--begin: Navigation -->
-                                <div class="kt-notification">
+                                <div class="kt-notification" data-toggle="kt-tooltip" title="Registration" data-placement="top">
                                     <a href="#" class="kt-notification__item">
                                         <div class="kt-notification__item-icon">
                                             <i class="flaticon2-calendar-3 kt-font-success"></i>
